# fastapi-keycloak-rbac

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_http.py
fastapi_keycloak_rbac/: __init__.py  backend.py  cache.py  config.py  dependencies.py  exceptions.py  manager.py  metrics.py  models.py  rbac.py
src/fastapi_keycloak_auth/: __init__.py
tests/: test_backend.py  test_cache.py  test_config.py  test_dependencies.py  test_exceptions.py  test_manager.py  test_metrics.py  test_models.py  test_rbac.py
