[project]
name = "fastapi-keycloak-rbac"
version = "0.2.1"
description = "Keycloak authentication and RBAC for FastAPI — type-safe, configurable, zero project-specific dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Aleksandar Krsteski", email = "acikabubo@gmail.com" },
]
keywords = ["fastapi", "keycloak", "authentication", "websocket", "rbac"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "python-keycloak>=7.1.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "starlette>=0.38.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
redis = [
    "redis>=7.2.0",
]
metrics = [
    "prometheus-client>=0.24.1",
]
all = [
    "redis>=7.2.0",
    "prometheus-client>=0.24.1",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.8.0",
    "ruff>=0.8.0",
    "redis>=7.2.0",
    "prometheus-client>=0.24.1",
    "fakeredis>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/acikabubo/fastapi-keycloak-rbac"
Documentation = "https://github.com/acikabubo/fastapi-keycloak-rbac#readme"
Repository = "https://github.com/acikabubo/fastapi-keycloak-rbac"
Issues = "https://github.com/acikabubo/fastapi-keycloak-rbac/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_keycloak_rbac"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=fastapi_keycloak_rbac",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["fastapi_keycloak_rbac"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstract",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "keycloak.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "S101"]  # Allow assert statements in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
